Fixed overflow issue and prevented body scrolling

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 @import "tailwindcss";
 
-body {
+html , body {
     font-family: 'Inter', sans-serif;
+    overflow: hidden;
 }
 
 *{
